--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Gallery for Yandex School</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="name">Галерея</string>
+    <string name="miss"><u>Пропустить</u></string>
+    <string name="prod_bottom_do_in_basket">В корзину</string>
+    <string name="about_company">Какая-то инфа о компании</string>
+    <string name="instruction">Инструкция</string>
 </resources>
