--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,29 @@
     <string name="name">Галерея</string>
     <string name="miss"><u>Пропустить</u></string>
     <string name="prod_bottom_do_in_basket">В корзину</string>
-    <string name="about_company">Какая-то инфа о компании</string>
-    <string name="instruction">Инструкция</string>
+    <string name="about_company">
+        Данное приложение создавалось в качестве тестового задания для Летней Школы Мобильной Разработки Яндеса 2018.
+        При создании приложения большое внимание уделялось качеству кода, его организации.
+        Для организации галереи был выбран сервис Firebase. Были использованы следующие сервисы Firebase: Authentication - для регистрации пользователей в приложении. Realtime Database - для хранения данных о пользователях и загруженных ими изображениях. Storage - для хранения изображений.
+        По заданию внимание было обращено на кэширование данных. Firebase самостоятельно справляется с этой задачей без дополнительного кода, а кэшированием изображений занимается библиотека для работы с изображениями - Glide.
+        Навигация по приложению - была использована современная библиотека Cicerone.
+        Так как это приложение - попытка придерживаться современных канонов, а конкретно Clean Architecture, то решено было реализовать MVP. Реализация посредством современной библиотеки Moxy.
+        Dependency Injection - Dagger 2, типично для реализации этого анти-паттерна на Android.
+        Данные с Firebase было решено получать реактивно (почему нет?) с помощью библиотеки RxFiebase.
+    </string>
+    <string name="instruction">Приложение представляет собой простую галерею для просмотра изображений и возможностью оценивать понравившиеся.Также есть возможность загружать свои изображения.
+        В приложении имеется выдвигающаяся панель слева, с помощью которой вы можете передвигаться между разделами: Галерея, Избранное, Моя галерея.
+        Галерея - здесь вы можете найти все картинки, загруженные пользователями, самые новые показываются первыми.
+        В правом нижнем углу экрна есть кнопка со знаом "+", с помощью которой вы можете перейти к добавлению своего собственного ихображения в галерею.
+        Все, вами загруженные изображения, вы можете найти в разделе - Моя галерея.
+        Для просмотра изображения в большем размере необходимо нажать на него в Галерее - вы перейдете к экрану с подробной информацией о нем: название, описание, лайки.
+        Также здесь вы можете поделиться изображением с друзьями, нажав на значок "Поделиться" в правом верхнем углу.
+        Есть возможность загрузить картинку на девайс, нажав кнопку с "Сохранить" под картинкой слева.
+        Избранное - здесь находятся все понравившиеся вам изображения.
+        Для того, чтобы обновить данные галереи нужно просто потянуть сверху экрана вниз (свайп).
+        Все загруженные вами фотографии и понравившиеся не потеряются при открытии приложения на другом вашем устройтсве, так как привязываются к аккаунту, который вы можете использовать на всех устройствах.
+        Выйти из аккаунта вы можете в настройках.
+        Рассказать друзьям о приложении вы можете, открыв панель меню слева и нажав на значок "Поделиться" в правом верхнем углу.
+        Приятного использования!
+    </string>
 </resources>
